--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,9 @@
   display: flex;
   flex-direction: row;
   color: blue;
+  justify-content: space-evenly;
 }
 
 a.active {
-  color: green;
+  color: yellow;
 }
